--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,5 @@
 version: 0.0
 os: linux
 files:
-  - source: .\shadi
-    destination: \var\www\html\
+  - source: ./shadi
+    destination: /var/www/html/
