--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,105 +1,13 @@
 version: 0.2
 
-run-as: Linux-user-name
-
-env:
-  shell: shell-tag
-  variables:
-    key: "value"
-    key: "value"
-  parameter-store:
-    key: "value"
-    key: "value"
-  exported-variables:
-    - variable
-    - variable
-  secrets-manager:
-    key: secret-id:json-key:version-stage:version-id
-  git-credential-helper: yes
-
-proxy:
-  upload-artifacts:  yes
-  logs:  yes
-
-batch:
-  fast-fail: false 
-  # build-list:
-  # build-matrix:
-  # build-graph:
-        
 phases:
-  install:
-    run-as: Linux-user-name
-    on-failure: ABORT | CONTINUE
-    runtime-versions:
-      runtime: version
-      runtime: version
-    commands:
-      - command
-      - command
-    finally:
-      - command
-      - command
-  pre_build:
-    run-as: Linux-user-name
-    on-failure:  CONTINUE
-    commands:
-      - command
-      - command
-    finally:
-      - command
-      - command
   build:
-    run-as: Linux-user-name
-    on-failure: ABORT | CONTINUE
     commands:
-      - command
-      - command
-    finally:
-      - command
-      - command
+    - echo "This is build phase... Zipping my webpage"
+ 
   post_build:
-    run-as: Linux-user-name
-    on-failure: ABORT | CONTINUE
     commands:
-      - command
-      - command
-    finally:
-      - command
-      - command
-reports:
-  report-group-name-or-arn:
-    files:
-      - location
-      - location
-    base-directory: location
-    discard-paths: no 
-    file-format: report-format
+    - echo "Deployed to S3"
 artifacts:
   files:
-    - location
-    - location
-  name: artifact-name
-  discard-paths: no 
-  base-directory: location
-  exclude-paths: excluded paths
-  enable-symlinks: no 
-  s3-prefix: prefix
-  secondary-artifacts:
-    artifactIdentifier:
-      files:
-        - location
-        - location
-      name: secondary-artifact-name
-      discard-paths: no 
-      base-directory: location
-    artifactIdentifier:
-      files:
-        - location
-        - location
-      discard-paths: no 
-      base-directory: location
-cache:
-  paths:
-    - path
-    - path
+    - '**/*'
